Iniciando Repository e Dependency injection

--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaulConnection": "Data Source=localhost;Initial Catalog=CleanArchMVC;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
