--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaulConnection": "Data Source=localhost;Initial Catalog=CleanArchMVC;Integrated Security=True"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=CleanArchMVC;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
